cambiando ubicación de archivo logo en header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="imagenes/Logo.png" alt="Logo de Alura con la inicial a">
+        <img src="Logo.png" alt="Logo de Alura con la inicial a">
     </header>
     <main>
         <section clas="texto-introducido">
