cambiando ubicación de símbolo con exclamación en index.html en .info

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section clas="texto-introducido">
             <textarea class="input-area" cols="40" rows="6" placeholder="Ingrese el texto aquí"></textarea> 
             <div class="botones">
-                <p class="info"><img src="imagenes/exclamación.png"> Solo letras minúsculas y sin acentos</p>                
+                <p class="info"><img src="exclamación.png"> Solo letras minúsculas y sin acentos</p>                
                 <button class="encriptar" onclick="btnEncriptar()"> Encriptar</button>
                 <button class="desencriptar" onclick="btnDesencriptar()">Desencriptar </button>
             </div>
