modificando texto en el placeholder de input.area

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <section clas="texto-introducido">
-            <textarea class="input-area" cols="40" rows="6" placeholder="Ingrese el texto aquí"></textarea> 
+            <textarea class="input-area" cols="40" rows="6" placeholder="Ingrese el texto que desee encriptar/desencriptar aquí"></textarea> 
             <div class="botones">
                 <p class="info"><img src="exclamación.png"> Solo letras minúsculas y sin acentos</p>                
                 <button class="encriptar" onclick="btnEncriptar()"> Encriptar</button>
